add route is now functioning properly again after modifications for images, temps, and time

--- a/templates/add.html
+++ b/templates/add.html
@@ -23,8 +23,8 @@
 
             <div class="form-group">
                 Upload an Image of the Mold: &nbsp;
-                <input class="form-control" name="mold_img"
-                       type="file" style="height: 46px; width: 692px">
+                <input class="form-control" type="file" name="mold_img"
+                       style="height: 46px; width: 692px">
             </div><hr>
 
             <h4>The Resin Used in this Project:</h4><br>
@@ -75,7 +75,7 @@
 
             <div class="form-group">
                 Type of Color(s) (separate by commas): <input autofocus class="form-control"
-                                                              name="color_type"
+                                                              name="color_types"
                                                               placeholder="Type of Color(s)"
                                                               type="text"
                                                               style="width: 638px;
@@ -100,7 +100,7 @@
 
             <div class="form-group">
                 Type of Glitter(s) (separate by commas): <input autofocus class="form-control"
-                                                                name="color_type"
+                                                                name="glitter_types"
                                                                 placeholder="Type of Glitter(s)"
                                                                 type="text"
                                                                 style="width: 638px;
@@ -136,11 +136,11 @@
             <div class="form-group">
                 Time from Completing Pouring to De-molding:
                 &nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-                <input autofocus class="form-control" name="time_to_demold_hrs"
+                <input autofocus class="form-control" name="demolding_time_hrs"
                        placeholder="Hour(s)" type="text"
                        style="width: 100px; text-align: center"> hours
                 &nbsp; &nbsp; &nbsp; : &nbsp; &nbsp; &nbsp;
-                <input autofocus class="form-control" name="time_to_demold_mins"
+                <input autofocus class="form-control" name="demolding_time_mins"
                        placeholder="Minute(s)" type="text"
                        style="width: 100px; text-align: center"> minutes
             </div><hr>
@@ -215,9 +215,7 @@
 
             <div class="form-group">
                 Upload an Image of the Results: &nbsp; <input class="form-control"
-                                                name="res_img"
-                                                type="file"
-                                                placeholder="Upload Result Image"
+                                                type="file" name="res_img"
                                                 style="height: 46px; width: 692px">
             </div><hr>
 
