edit_act route is now functioning properly again after slight modifications to column names

--- a/templates/edit_act.html
+++ b/templates/edit_act.html
@@ -15,8 +15,8 @@
             <div class="form-group">
                 First Name: &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
                 <input autofocus
-                       class="form-control" name="first_name"
-                       value="{{ user.first_name }}"
+                       class="form-control" name="first"
+                       value="{{ user.first }}"
                        type="text">
             </div>
 
@@ -24,7 +24,7 @@
                 Last Name: &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
                 <input autofocus
                        class="form-control"
-                       name="last_name" value="{{ user.last_name }}"
+                       name="last" value="{{ user.last }}"
                        type="text">
             </div>
 
