--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,7 +13,7 @@
           integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
           crossorigin="anonymous">
 
-    <link href="/static/favicon.ico" rel="icon">
+{#    <link href="/static/favicon.ico" rel="icon">#}
 
     <link href="/static/styles.css" rel="stylesheet">
 
