trying to fix error for heroku deployment

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,9 +13,9 @@
           integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
           crossorigin="anonymous">
 
-    <link href="../static/favicon.ico" rel="icon">
+    <link href="/static/favicon.ico" rel="icon">
 
-    <link href="../static/styles.css" rel="stylesheet">
+    <link href="/static/styles.css" rel="stylesheet">
 
     <!-- http://getbootstrap.com/docs/4.5/ -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
